<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.main.fragment.profile.ProfileFragment">


    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/user_profile"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_marginTop="40dp"
        android:src="@drawable/profile"
        app:layout_constraintEnd_toStartOf="@+id/guideline9"
        app:layout_constraintStart_toStartOf="@+id/guideline8"
        app:layout_constraintTop_toBottomOf="@+id/tv_profile" />

    <TextView
        android:id="@+id/tv_profile"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/profile"
        android:textColor="@color/dark_gray"
        android:textSize="22sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/guideline10" />

    <TextView
        android:id="@+id/tv_profile2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:text="@string/update_profile"
        android:textColor="@color/dark_gray"
        android:textSize="22sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toStartOf="@+id/guideline9"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/guideline8"
        app:layout_constraintTop_toBottomOf="@+id/tv_name2" />

    <EditText
        android:id="@+id/editText9"
        android:layout_width="0dp"
        android:layout_height="60dp"
        android:layout_marginTop="15dp"
        android:background="@drawable/edttext_background"
        android:elevation="10dp"
        android:ems="10"
        android:hint="@string/name"
        android:paddingStart="10dp"
        android:paddingEnd="10dp"
        android:textColorHint="@color/gray"
        app:layout_constraintEnd_toStartOf="@+id/guideline9"
        app:layout_constraintStart_toStartOf="@+id/guideline8"
        app:layout_constraintTop_toBottomOf="@+id/tv_profile2" />

    <EditText
        android:id="@+id/editText6"
        android:layout_width="0dp"
        android:layout_height="60dp"
        android:layout_marginTop="15dp"
        android:background="@drawable/edttext_background"
        android:elevation="10dp"
        android:ems="10"
        android:hint="@string/tb"
        android:paddingStart="10dp"
        android:paddingEnd="10dp"
        android:textColorHint="@color/gray"
        app:layout_constraintEnd_toEndOf="@+id/editText9"
        app:layout_constraintStart_toStartOf="@+id/editText9"
        app:layout_constraintTop_toBottomOf="@+id/editText9" />

    <EditText
        android:id="@+id/editText8"
        android:layout_width="0dp"
        android:layout_height="60dp"
        android:layout_marginTop="15dp"
        android:background="@drawable/edttext_background"
        android:elevation="10dp"
        android:ems="10"
        android:hint="@string/bb"
        android:paddingStart="10dp"
        android:paddingEnd="10dp"
        android:textColorHint="@color/gray"
        app:layout_constraintEnd_toEndOf="@+id/editText6"
        app:layout_constraintStart_toStartOf="@+id/editText6"
        app:layout_constraintTop_toBottomOf="@+id/editText6" />

    <TextView
        android:id="@+id/tv_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:gravity="center"
        android:text="example"
        android:textColor="@color/dark_gray"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="@+id/user_profile"
        app:layout_constraintStart_toStartOf="@+id/user_profile"
        app:layout_constraintTop_toBottomOf="@+id/user_profile" />

    <TextView
        android:id="@+id/tv_name2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="48dp"
        android:gravity="center"
        android:text="name@example.com"
        android:textColor="@color/dark_gray"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="@+id/tv_name"
        app:layout_constraintStart_toStartOf="@+id/tv_name"
        app:layout_constraintTop_toBottomOf="@+id/user_profile" />

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:src="@drawable/btm_background"
            android:scaleType="fitXY"
            tools:layout_editor_absoluteX="0dp"
            tools:layout_editor_absoluteY="633dp" />

    </FrameLayout>

    <Button
        android:id="@+id/btn_login3"
        style="@style/Widget.AppCompat.Button"
        android:layout_width="150dp"
        android:layout_height="50dp"
        android:background="@drawable/button_corner"
        android:text="@string/update"
        android:textAllCaps="false"
        android:textSize="16sp"
        app:layout_constraintBottom_toTopOf="@+id/guideline11"
        app:layout_constraintStart_toStartOf="@+id/guideline8"
        app:layout_constraintTop_toBottomOf="@+id/editText8" />

    <Button
        android:id="@+id/btn_logout"
        style="@style/Widget.AppCompat.Button"
        android:layout_width="150dp"
        android:layout_height="50dp"
        android:background="@drawable/button_corner"
        android:text="@string/logout"
        android:textAllCaps="false"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="@+id/btn_login3"
        app:layout_constraintEnd_toStartOf="@+id/guideline9"
        app:layout_constraintHorizontal_bias="0.936"
        app:layout_constraintStart_toEndOf="@+id/btn_login3"
        app:layout_constraintTop_toTopOf="@+id/btn_login3" />


    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline8"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_begin="20dp" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline9"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_end="20dp" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline10"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_begin="20dp" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline11"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_end="60dp" />
</androidx.constraintlayout.widget.ConstraintLayout>